--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,15 +15,15 @@ test_script:
   - node --version
   - npm --version
   # run tests
-  - set GYP_MSVS_VERSION "2010"
+  - $env:GYP_MSVS_VERSION = "2010"
   - npm install --unsafe-perm
   - npm test
   - rm -rf node_modules
-  - set GYP_MSVS_VERSION "2012"
+  - $env:GYP_MSVS_VERSION = "2012"
   - npm install --unsafe-perm
   - npm test
   - rm -rf node_modules
-  - set GYP_MSVS_VERSION "2013"
+  - $env:GYP_MSVS_VERSION = "2013"
   - npm install --unsafe-perm
   - npm test
 
