Adjusted to match powershell

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,15 +15,15 @@ test_script:
   - node --version
   - npm --version
   # run tests
-  - $env:GYP_MSVS_VERSION = "2010"
+  - set GYP_MSVS_VERSION=2010
   - npm install --unsafe-perm
   - npm test
   - rm -rf node_modules
-  - $env:GYP_MSVS_VERSION = "2012"
+  - set GYP_MSVS_VERSION=2012
   - npm install --unsafe-perm
   - npm test
   - rm -rf node_modules
-  - $env:GYP_MSVS_VERSION = "2013"
+  - set GYP_MSVS_VERSION=2013
   - npm install --unsafe-perm
   - npm test
 
