--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,25 @@
 version: 1.0.{build}
+os: Windows Server 2012 R2
 environment:
   WERCKER_ROOT: true
   nodejs_version: 0.10
   matrix:
-  - GYP_MSVS_VERSION: 2008
-    os: Windows Server 2012 R2
-  - GYP_MSVS_VERSION: 2010
-    os: Windows Server 2012 R2
-  - GYP_MSVS_VERSION: 2012
-    os: Windows Server 2012 R2
-  - GYP_MSVS_VERSION: 2013
-    os: Windows Server 2012 R2
-  - GYP_MSVS_VERSION: 2015
-    os: Visual Studio 2015
+  - MSVS: 2008
+  #   os: Windows Server 2012 R2
+  - MSVS: 2010
+  #   os: Windows Server 2012 R2
+  - MSVS: 2012
+  #   os: Windows Server 2012 R2
+  - MSVS: 2013
+  #   os: Windows Server 2012 R2
+  # - GYP_MSVS_VERSION: 2015
+  #   os: Visual Studio 2015
 install:
 - ps: Install-Product node $env:nodejs_version
 - npm install -g node-gyp
 build: off
 test_script:
-- npm install --unsafe-perm
+- npm install --unsafe-perm --msvs_version=%MSVS%
 - node --version
 - npm --version
 - npm test
